--- a/src/client/src/styles.css
+++ b/src/client/src/styles.css
@@ -1,50 +1,44 @@
 body {
-    font: 14px "Century Gothic", Futura, sans-serif;
-    margin: 20px;
-  }
-  
-  ol, ul {
-    padding-left: 30px;
-  }
-  
-  .board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-  }
-  
-  .status {
-    margin-bottom: 10px;
-  }
-  
-  .square {
-    background: #fff;
-    border: 1px solid #999;
-    float: left;
-    font-size: 24px;
-    font-weight: bold;
-    line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
-    padding: 0;
-    text-align: center;
-    width: 34px;
-  }
-  
-  .square:focus {
-    outline: none;
-  }
-  
-  .kbd-navigation .square:focus {
-    background: #ddd;
-  }
-  
-  .game {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .game-info {
-    margin-left: 20px;
-  }
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+}
+
+/*
+ol, ul {
+padding-left: 30px;
+}
+*/
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+/*
+.content {
+  position: relative;
+  margin: 0 auto;
+  background-color: #000;
+  width: 600px;
+  height: 600px;
+  background-image:
+    linear-gradient(#333 1px, transparent 1px),
+    linear-gradient(90deg, #333 1px, transparent 1px);
+  background-size: 35px 35px;
+}
+*/
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  height: 35px;
+  width: 35px;
+  margin-right: -1px;
+  margin-top: -1px;
+  text-align: center;
+}
+
+.board {
+  margin: 0% 25%;
+}
